<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/presents_big_background"
    android:backgroundTint="#BFFFFFFF"
    android:backgroundTintMode="src_over">

    <EditText
        android:id="@+id/adresEmail"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adres_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_register_edittexts"
        android:padding="10dp"
        android:textCursorDrawable="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReg"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/haslo"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/has_o_minimum_8_znak_w"
        android:inputType="textPassword"
        android:background="@drawable/login_register_edittexts"
        android:textCursorDrawable="@color/colorPrimary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresEmail"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:text="@string/zatwierd"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haslo"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ju_zarejestrowany_kliknij_tutaj_aby_si_zalogowa"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:text="@string/rejestracja"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"/>

</androidx.constraintlayout.widget.ConstraintLayout>